[tool.poetry]
name = "test-async-server"
version = "0.1.0"
description = "Test application for Asynchronous Server Gateway Interface using FastAPI and Uvicorn."
authors = ["Andrei Valdez <andreivaldezau@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
